# viewtest

./: .gitignore  MainWindow.ui  MyGraphicsStuff.py  UI_MainWindow.py  main.py  pyproject.toml
