[tool.poetry]
name = "viewtest"
version = "0.1.0"
description = ""
authors = ["John Beaulieu <john@john-doris.org>"]

[tool.poetry.dependencies]
python = "==3.8.5"
PySide2 = "^5.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
